@@ -3,7 +3,7 @@
 moduledir   = @DATADIR@/ebox/modules
 module_DATA = mailfilter.yaml
 
-pkgdata_DATA = eboxfilter.schema
+pkgdata_DATA = eboxfilter.ldif amavis.ldif
 
 EXTRA_DIST = $(module_DATA) $(pkgdata_DATA)
 
