@@ -1,14 +1,0 @@
-attributetype ( 1.3.6.1.4.1.31607.2.1.4.1.1 NAME 'domainMailPortion'
-	DESC 'right-hand portion of the mail user portion. Needed for amavis matching'
-	EQUALITY caseIgnoreIA5Match
-	SUBSTR caseIgnoreIA5SubstringsMatch
-	SYNTAX 1.3.6.1.4.1.1466.115.121.1.26{256} SINGLE-VALUE )
-			
-objectclass ( 1.3.6.1.4.1.31607.2.1.4.2.1 NAME 'vdmailfilter' AUXILIARY
-	DESC 'Filtering properties for a virtual domain'
-	SUP  'amavisAccount'
-	MAY ( 
-	 domainMailPortion
-	))	
-
-
